# document-research-tool

./: .env_example  .gitignore  01_index_data.ipynb  README.md  pyproject.toml  research_app.py  utils.py  utils_config.py  utils_prompts.py
_data/: 02_KRP_selec.parq  03_KRP_chunks.parq
_weaviate_index/: classifications.db  schema.db
_weaviate_index/raft/: raft.db
_weaviate_index/research_app/8kx3p70lXsnK/: proplengths
_weaviate_index/research_app/8kx3p70lXsnK/lsm/objects/: segment-1747984782214910000.bloom  segment-1747984782214910000.cna  segment-1747984782214910000.secondary.0.bloom  segment-1747984782214910000.secondary.1.bloom
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property__id/: segment-1747984782214681000.bloom  segment-1747984782214681000.db
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property_identifier/: segment-1747984782214671000.db
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property_identifier_searchable/: segment-1747984782215086000.bloom  segment-1747984782215086000.db
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property_text/: segment-1747984782214696000.bloom
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property_title/: segment-1747984782214682000.db
_weaviate_index/research_app/8kx3p70lXsnK/lsm/property_title_searchable/: segment-1747984782215075000.bloom  segment-1747984782215075000.db
_weaviate_index/research_app/8kx3p70lXsnK/main.hnsw.commitlog.d/: 1747984782
